chore(v5): relocate v5 client artifact