@@ -6,10 +6,15 @@
   <artifactId>client</artifactId>
   <packaging>jar</packaging>
   <version>5.5.1-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
-  <name>Weaviate Java client</name>
-  <description>A java client for Weaviate Vector Search Engine</description>
-  <url>https://github.com/weaviate/java-client</url>
+  <name>Weaviate Java Client</name>
+  <description>
+    This artifact has been relocated to io.weaviate.client6.
+    The new version includes a number of breaking changes.
+    Please consult our migration guide: https://weaviate.io/blog/weaviate-java-client-v6#migration-guide.
+  </description>
+  <url>https://github.com/weaviate/java-client/tree/v5</url>
 
   <organization>
     <name>Weaviate B.V.</name>
@@ -19,7 +24,7 @@
   <licenses>
     <license>
       <name>Weaviate B.V. License</name>
-      <url>https://github.com/weaviate/java-client/blob/main/LICENSE</url>
+      <url>https://github.com/weaviate/java-client/blob/v5/LICENSE</url>
     </license>
   </licenses>
 
@@ -35,439 +40,12 @@
   <scm>
     <connection>scm:git:git://github.com/weaviate/java-client.git</connection>
     <developerConnection>scm:git:ssh://github.com:weaviate/java-client.git</developerConnection>
-    <url>https://github.com/weaviate/java-client/tree/main</url>
+    <url>https://github.com/weaviate/java-client/tree/v5</url>
     <tag>5.5.0</tag>
   </scm>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.sourceEncoding>UTF-8</project.reporting.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <maven.compiler.release>8</maven.compiler.release>
-    <lombok.version>1.18.38</lombok.version>
-    <gson.version>2.13.1</gson.version>
-    <httpclient.version>5.5</httpclient.version>
-    <lang3.version>3.18.0</lang3.version>
-    <junit.version>5.13.4</junit.version>
-    <testcontainers.version>1.21.3</testcontainers.version>
-    <assertj-core.version>3.27.4</assertj-core.version>
-    <jparams.version>1.0.4</jparams.version>
-    <mockito.version>5.19.0</mockito.version>
-    <slf4j.version>2.0.17</slf4j.version>
-    <logback.version>1.5.18</logback.version>
-    <mock-server.version>5.14.0</mock-server.version>
-    <jackson.version>2.19.2</jackson.version>
-    <oauth2-oidc-sdk.version>11.27.1</oauth2-oidc-sdk.version>
-    <mock-server.version>5.15.0</mock-server.version>
-    <protobuf.java.version>4.32.0</protobuf.java.version>
-    <protobuf.java-util.version>4.32.0</protobuf.java-util.version>
-    <grpc-protobuf.version>1.75.0</grpc-protobuf.version>
-    <grpc-stub.version>1.75.0</grpc-stub.version>
-    <grpc-netty-shaded.version>1.75.0</grpc-netty-shaded.version>
-    <annotations-api.version>6.0.53</annotations-api.version>
-  </properties>
-
-  <dependencies>
-    <dependency>
-      <groupId>com.google.protobuf</groupId>
-      <artifactId>protobuf-java</artifactId>
-      <version>${protobuf.java.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.protobuf</groupId>
-      <artifactId>protobuf-java-util</artifactId>
-      <version>${protobuf.java-util.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>io.grpc</groupId>
-        <artifactId>grpc-netty-shaded</artifactId>
-        <version>${grpc-netty-shaded.version}</version>
-        <scope>runtime</scope>
-      </dependency>
-    <dependency>
-      <groupId>io.grpc</groupId>
-      <artifactId>grpc-protobuf</artifactId>
-      <version>${grpc-protobuf.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.grpc</groupId>
-      <artifactId>grpc-stub</artifactId>
-      <version>${grpc-stub.version}</version>
-    </dependency>
-    <dependency> <!-- necessary for Java 9+ -->
-      <groupId>org.apache.tomcat</groupId>
-      <artifactId>annotations-api</artifactId>
-      <version>${annotations-api.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.httpcomponents.client5</groupId>
-      <artifactId>httpclient5</artifactId>
-      <version>${httpclient.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>${lombok.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>${gson.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>${lang3.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.nimbusds</groupId>
-      <artifactId>oauth2-oidc-sdk</artifactId>
-      <version>${oauth2-oidc-sdk.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.testcontainers</groupId>
-      <artifactId>weaviate</artifactId>
-      <version>${testcontainers.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.testcontainers</groupId>
-      <artifactId>minio</artifactId>
-      <version>${testcontainers.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
-      <version>${assertj-core.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.jparams</groupId>
-      <artifactId>jparams-junit4</artifactId>
-      <version>${jparams.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>${mockito.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>${slf4j.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>${logback.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mock-server</groupId>
-      <artifactId>mockserver-netty</artifactId>
-      <version>${mock-server.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-annotations</artifactId>
-      <version>${jackson.version}</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-
-  <build>
-    <extensions>
-      <extension>
-        <groupId>kr.motd.maven</groupId>
-        <artifactId>os-maven-plugin</artifactId>
-        <version>1.7.1</version>
-      </extension>
-    </extensions>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.xolstice.maven.plugins</groupId>
-          <artifactId>protobuf-maven-plugin</artifactId>
-          <version>0.6.1</version>
-          <configuration>
-            <protocArtifact>com.google.protobuf:protoc:3.24.0:exe:${os.detected.classifier}</protocArtifact>
-            <outputDirectory>src/main/java</outputDirectory>
-            <pluginId>grpc-java</pluginId>
-            <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.58.0:exe:${os.detected.classifier}</pluginArtifact>
-            <outputDirectory>src/main/java</outputDirectory>
-            <clearOutputDirectory>false</clearOutputDirectory>
-
-          </configuration>
-          <executions>
-            <execution>
-              <goals>
-                <goal>compile</goal>
-                <goal>compile-custom</goal>
-                <goal>test-compile</goal>
-                <goal>test-compile-custom</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.2.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.13.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.2</version>
-          <configuration>
-            <trimStackTrace>false</trimStackTrace>
-            <argLine>
-              <!--
-                Gson (used for JSON serialization) utilizes reflection and needs to be able to access private fields of
-                Java core classes. For that to work correctly after Java 9, we need to open up some of the core Java
-                classes to reflection.
-                @see: https://www.oracle.com/corporate/features/understanding-java-9-modules.html
-              -->
-              --add-opens=java.base/java.lang=ALL-UNNAMED
-            </argLine>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.projectlombok</groupId>
-          <artifactId>lombok-maven-plugin</artifactId>
-          <version>1.18.20.0</version>
-          <executions>
-            <execution>
-              <id>delombok-sources</id>
-              <phase>generate-sources</phase>
-              <goals>
-                <goal>delombok</goal>
-              </goals>
-              <configuration>
-                <sourceDirectory>src/main/java</sourceDirectory>
-                <outputDirectory>${project.build.directory}/delombok</outputDirectory>
-                <addOutputDirectory>false</addOutputDirectory>
-                <encoding>UTF-8</encoding>
-              </configuration>
-            </execution>
-          </executions>
-          <dependencies>
-            <dependency>
-              <groupId>org.projectlombok</groupId>
-              <artifactId>lombok</artifactId>
-              <version>${lombok.version}</version>
-            </dependency>
-          </dependencies>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>versions-maven-plugin</artifactId>
-          <version>2.18.0</version>
-          <configuration>
-            <allowSnapshots>false</allowSnapshots>
-            <generateBackupPoms>false</generateBackupPoms>
-            <ruleSet>
-              <ignoreVersions>
-                <ignoreVersion>
-                  <type>regex</type>
-                  <version>(.+-SNAPSHOT|.+-(M|RC|rc)\d|.+-(alpha|beta)\d?)</version>
-                </ignoreVersion>
-              </ignoreVersions>
-            </ruleSet>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-antrun-plugin</artifactId>
-          <version>3.0.0</version>
-          <executions>
-            <execution>
-              <id>generate-delomboked-sources-jar</id>
-              <phase>package</phase>
-              <goals>
-                <goal>run</goal>
-              </goals>
-              <configuration>
-                <target>
-                  <jar destfile="${project.build.directory}/${project.build.finalName}-sources.jar" basedir="${project.build.directory}/delombok"/>
-                </target>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>build-helper-maven-plugin</artifactId>
-          <version>3.2.0</version>
-          <executions>
-            <execution>
-              <id>attach-delomboked-sources-jar</id>
-              <phase>package</phase>
-              <goals>
-                <goal>attach-artifact</goal>
-              </goals>
-              <configuration>
-                <artifacts>
-                  <artifact>
-                    <file>${project.build.directory}/${project.build.finalName}-sources.jar</file>
-                    <type>jar</type>
-                    <classifier>sources</classifier>
-                  </artifact>
-                </artifacts>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-javadoc-plugin</artifactId>
-          <version>3.2.0</version>
-          <executions>
-            <execution>
-              <id>attach-javadocs</id>
-              <phase>package</phase>
-              <goals>
-                <goal>jar</goal>
-              </goals>
-            </execution>
-          </executions>
-          <configuration>
-            <sourcepath>${project.build.directory}/delombok</sourcepath>
-            <!--Disable warnings about missing docstrings.-->
-            <doclint>all,-missing</doclint>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-source-plugin</artifactId>
-          <version>3.2.1</version>
-          <executions>
-            <execution>
-              <id>attach-sources</id>
-              <phase>package</phase>
-              <goals>
-                <goal>jar-no-fork</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-gpg-plugin</artifactId>
-          <version>3.2.8</version>
-          <executions>
-            <execution>
-              <id>sign-artifacts</id>
-              <phase>verify</phase>
-              <goals>
-                <goal>sign</goal>
-              </goals>
-              <configuration>
-                <!-- ${gpg.keyname} is set in settings.xml from settings.tar.gpg archive -->
-                <useAgent>true</useAgent>
-                <bestPractices>true</bestPractices>
-                <gpgArguments>
-                  <arg>--batch</arg>
-                  <arg>--pinentry-mode</arg>
-                  <arg>loopback</arg>
-                </gpgArguments>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.2.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>3.0.0-M1</version>
-        </plugin>
-
-        <!-- Maven includes maven-deploy-plugin by default, but we want to delegate -->
-        <!-- deployement to a third-party plugin. We add this entry to override <skip> -->
-        <!-- and ensure we dont' accidentaily publish twice. -->
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>3.0.0-M1</version>
-          <configuration>
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-
-        <plugin>
-          <groupId>org.sonatype.central</groupId>
-          <artifactId>central-publishing-maven-plugin</artifactId>
-          <version>0.8.0</version>
-          <extensions>true</extensions>
-          <configuration>
-            <!-- Auto-publishing is disabled by default to prevent accidental deployments. -->
-            <!-- When testing, it is therefore safe to run `mvn deploy` from your local machine, -->
-            <!-- as publishing will require manual action. -->
-            <!-- In CI we override this option to true and waitUtil=published. -->
-            <autoPublish>${central-publishing.autoPublish}</autoPublish>
-            <waitUntil>${central-publishing.waitUntil}</waitUntil>
-          </configuration>
-        </plugin>
-
-        <plugin>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.9.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>3.1.1my</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-    <plugins>
-      <plugin>
-        <groupId>org.projectlombok</groupId>
-        <artifactId>lombok-maven-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.xolstice.maven.plugins</groupId>
-        <artifactId>protobuf-maven-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-antrun-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-gpg-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.sonatype.central</groupId>
-        <artifactId>central-publishing-maven-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </build>
+  <relocation>
+    <groupId>io.weaviate</groupId>
+    <artifactId>client6</artifactId>
+  </relocation>
 </project>
